# interledger

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/interledger/core/: condition.hpp
src/core/: condition.cpp
test/: condition_tests.cpp
